fix: footer alignment

--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -10,7 +10,7 @@
 
     +max-screen($breakpoint-md)
       flex-direction: column
-      align-items: center
+      align-items: stretch
       gap: rem(30px)
 
   &__col
@@ -36,6 +36,7 @@
 
     li
       line-height: 0.5
+      text-align: center
 
     a
       text-transform: uppercase
